# RavenLink

./: .gitignore  CLAUDE.md  README.md  build.spec  config.ini.example  config.yaml.example  frc-obs-bridge-plan.md  go.mod  go.sum  pyproject.toml  ravenlink.py  requirements.txt
cmd/iconbuilder/: main.go
cmd/ntprobe/: main.go
cmd/ravenlink/: main.go
cmd/rbping/: main.go
cmd/wpilogcheck/: main.go
docs/: DEVELOPMENT.md
docs/plans/: 2026-04-09-001-feat-nt-data-collector-store-forward-plan.md  2026-04-09-002-fix-idempotent-telemetry-upload-plan.md  (+6 more)
scripts/: build-macos.sh
src/: autostart.py  bridge_status.py  config.py  main.py  nt_client.py  nt_logger.py  obs_client.py  ravenbrain_auth.py  state_machine.py  tray_icon.py  uploader.py  web_dashboard.py
tests/: test_bitmask.py  test_nt_logger.py  test_state_machine.py  test_uploader.py
todos/: 001-complete-p1-logger-never-starts-session.md  002-complete-p1-fmsinfo-not-subscribed.md  003-complete-p1-logger-data-races.md  004-complete-p1-synchronous-uploads-block-main-loop.md  005-complete-p1-obsclient-blocks-main-loop.md  006-pending-p1-fsync-per-line-performance.md  007-complete-p1-dashboard-exposes-passwords-on-network.md  008-complete-p1-rbping-leaks-jwt-and-password-fingerprint.md  009-complete-p2-config-security-hardening.md  010-pending-p2-hot-reload-is-mostly-fake.md  011-complete-p2-test-coverage-gap.md  012-complete-p2-http-client-no-keepalive.md  013-complete-p2-duplicate-toInt-implementations.md  014-complete-p2-uploader-Run-is-dead-code.md  015-complete-p3-cleanup-code-smells.md
(+53 files in other folders)
