[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "ravenlink"
version = "0.1.0"
description = "FRC robot data bridge — NT telemetry collection, OBS recording, and RavenBrain upload"
requires-python = ">=3.11"
dependencies = [
    "pyntcore",
    "obsws-python",
    "requests",
    "flask",
    "pystray",
    "Pillow",
]

[project.optional-dependencies]
dev = [
    "pyinstaller",
    "pytest",
]

[project.scripts]
ravenlink = "src.main:main"
